<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- StatusActivity -->
    <string name="titleStatus">Status Update</string>
    <string name="hintText">Please enter your %d character status</string>
    <string name="buttonUpdate">Submit</string>
    <string name="buttonBusy">Updating</string>
    <string name="failMessage">Update failed.\nError=%s</string>
    <string name="successMessage">Update sent.</string>
    <string name="statusOfflineMessage">No data connection. Message saved for later send</string>
    <string name="textViewAvailChars">Available characters:\u0020</string>
    <string name="connectionError">Error connecting to server. Check username, password and URL.</string>
    
    <!--  Preferences -->
    <string name="prefs_name">Preferences Yamba</string>
    <string name="fillRequiredPreferences">User and url required.</string>
    
    <!--  Preferences Credentials Category -->
    <string name="credentialsCatTitle">Credentials</string>
    <string name="userTitle">User name</string>
    <string name="userSum">Name of the user</string>
    <string name="passTitle">Password</string>
    <string name="passSum">The password</string>
    <string name="urlTitle">Url</string>
    <string name="urlSum">Site base url</string>
    
    <!--  Preferences Status Category -->
    <string name="statusCatTitle">Status</string>
    <string name="maxCharsTitle">Maximum Characters</string>
    <string name="maxCharsSum">Maximum number of characters</string>
    
    <!--  Preferences Timeline Category -->
    <string name="timelineCatTitle">Timeline</string>
    <string name="maxPostsTitle">Posts</string>
    <string name="maxPostsSum">Maximum number of posts shown in timeline</string>
    <string name="previewCharsTitle">Characters per post</string>
    <string name="previewCharsSum">Number of characters per post to display in timeline</string>
    <string name="autoRefreshTitle">Automatic refresh</string>    
    <string name="autoRefreshTimeTitle">Refresh period</string>
	<string name="autoRefreshTimeSum">Time to refresh timeline automatically</string>
    <string name="maxPostsStoredTitle"></string>
    <string name="maxPostsStoredSum"></string>

    
    <!-- Menu strings -->
    <string name="menuTimeline">Timeline</string>
    <string name="menuRefresh">Refresh</string>
    <string name="menuStatus">Status</string>
    <string name="menuPrefs">Settings</string>
    <string name="menuTerminate">Exit</string>
    <string name="menuUserInfo">Profile</string>
    
    <!-- Timeline -->
    <string name="tl_dialog_message">Loading Timeline</string>
    <string name="tl_title">Timeline</string>
    <string name="tl_notification_text">New message!</string>
    <string name="tl_notification_title_one">\u0020new message</string>
    <string name="tl_notification_title_several">\u0020new messages</string>
    
    <!-- Timeline Items -->
    <string name="tl_item_textmessage">Message</string>
    <string name="tl_item_textuser">User</string>
    <string name="tl_item_texttime">Created At</string>
    
    <!-- Date terms -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="daysAgo">%d days ago</string>
    
    <!-- App -->
    <string name="app_name">Yamba PDM</string>    
    <string name="titleYamba">Yamba PDM</string>
    
    <!-- Detail -->
    <string name="detail_user">User</string>
    <string name="detail_message">Message</string>
    <string name="detail_time">Created At</string>
    <string name="detail_id">Message Id</string>
    <string name="detail_title">Detail</string>
    <string name="detail_imgdesc">Share this message</string>
    <string name="detail_share_subject">Yamba message shared by\u0020</string>
    <string name="detail_error_noemail">No email account available</string>
    <string name="detail_user_image">User profile image</string>
    
    <!-- UserInfo -->
    <string name="userInfo_title">Profile</string>
    <string name="userInfo_name">Name:</string>
    <string name="userInfo_statusCount">Total posts:</string>
    <string name="userInfo_nSubscribers">Subscribers:</string>
    <string name="userInfo_nSubscriptions">Subscriptions:</string>
    <string name="userInfo_image">Avatar:</string>
    
	<!-- Widget -->
	<string name="widget_image_description">Go to application</string>
	<string name="widget_msg_last_time_update">Last update</string>
	<string name="widget_label">Yamba Timeline</string>

    
</resources>