<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menuTerminate" 
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title="@string/menuTerminate">
    </item>
    <item android:id="@+id/menuPrefs" 
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menuPrefs">
    </item>
    <item android:id="@+id/menuTimeline" 
          android:icon="@android:drawable/ic_menu_recent_history"
          android:title="@string/menuTimeline">
    </item>
    <item android:id="@+id/menuStatus" 
          android:icon="@android:drawable/ic_menu_send"
          android:title="@string/menuStatus">
    </item>
    <item android:id="@+id/menuRefresh" android:title="@string/menuRefresh" android:icon="@android:drawable/ic_menu_more"></item>
    

</menu>