<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"  android:layout_height="wrap_content"
        android:layout_margin="10dp" android:gravity="center"
        android:text="@string/titleStatus" android:textSize="32sp"
        android:textColor="#AA0"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewAvailChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAvailChars" />

        <TextView
            android:id="@+id/availChars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent" android:layout_height="0dp"
        android:layout_weight="1" android:gravity="top|center_horizontal"
        android:hint="@string/hintText" />
    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/buttonUpdate" android:textSize="20sp" />
</LinearLayout>